--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
 	<meta name="handheldfriendly" content="true">
 	<meta name="mobileoptimized" content="240">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
 </head>
 <body class="noscript">
-
+  <div class="site-wrapper" data-state="slide-closed">
+    <div class="sliding-canvas">
       <header class="header">
-        <h1>Push Menu</h1>
+        <h1 class="center upper">Push Menu</h1>
 
-        <nav class="navigation slide-menu">
+        <a class="toggle-btn" href="#"><i class="i-menu"></i><span>Menu</a></span>
+
+        <nav class="navigation slide-menu upper">
+        <a class="close-btn" href="#"><i class="i-close"></i><span>Close</a></span>
+
           <ul>
               <li><a href="#">Home</a></li>
               <li><a href="#">About</a></li>
@@ -31,6 +37,11 @@
 
       </footer><!-- /footer -->
 
+    </div><!-- /sliding canvas -->
+  </div><!-- /site-wrapper -->
+
   <!-- JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="js/push-menu.js" type="text/javascript"></script>
 </body>
 </html>
